# nuextract-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: probe_mlx_vlm.py
tests/: test_nuextract.py  test_streamlit_app.py  test_streamlit_app_apptest.py
