[project]
name = "nuextract-studio"
version = "1.0.0"
description = "Extract structured information from documents, convert images to Markdown, and generate templates with the NuMind NuExtract3 model on Apple Silicon with MLX."
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm==0.6.3",
    "streamlit==1.58.0",
    "torchvision==0.27.1",
    "transformers==5.12.1",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "ty==0.0.51",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ty.environment]
python-version = "3.12"  # analyze against the declared requires-python floor

[tool.ty.terminal]
error-on-warning = true  # warnings fail the check (CI gates on ty)

[tool.pytest.ini_options]
testpaths = ["tests"]
